创建其他页面 之 显示所有主题的页面。 (模板继承，渲染模板)

--- a/learning_log/learninglogs/templates/learninglogs/index.html
+++ b/learning_log/learninglogs/templates/learninglogs/index.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<p><h1>欢迎使用学习笔记，在本应用中，你可以写日记，写博客，写阅读笔记，以及职业技能。</h1></p>
+{% extends "learninglogs/base.html" %}
+
+{% block content %}
+<p>
+    这是学习笔记的主页
+</p>
+{% endblock content %}
 </body>
 </html>
