创建其他页面 之 显示特定主题的页面。 (修改不显示主题里面的内容页面)

--- a/learning_log/learninglogs/templates/learninglogs/topics.html
+++ b/learning_log/learninglogs/templates/learninglogs/topics.html
@@ -20,7 +20,7 @@
         <li>No topics have been added yet.</li>
     {% endfor %}
 </ul>
-
+<a href="{% url 'learninglogs:new_topic' %}">添加新主题</a>
 {% endblock content %}
 
 </body>
