--- a/learning_log/learninglogs/templates/learninglogs/topic.html
+++ b/learning_log/learninglogs/templates/learninglogs/topic.html
@@ -13,8 +13,10 @@
     Topic:{{ topic }}
 </p>
 
+<p>Entries:</p>
+
 <ul>
-    {% for topic in topics %}
+    {% for entry in entries %}
     <li>
         <p>{{ entry.date_added|date:'M d,Y H:i' }}</p>
         <p>{{ entry.text|linebreaks }}</p>
