--- a/learning_log/learninglogs/templates/learninglogs/topic.html
+++ b/learning_log/learninglogs/templates/learninglogs/topic.html
@@ -14,6 +14,9 @@
 </p>
 
 <p>Entries:</p>
+<p>
+    <a href="{% url 'learninglogs:new_entry' topic.id %}">添加新条目</a>
+</p>
 
 <ul>
     {% for entry in entries %}
