--- a/learning_log/learninglogs/templates/learninglogs/topic.html
+++ b/learning_log/learninglogs/templates/learninglogs/topic.html
@@ -23,6 +23,9 @@
     <li>
         <p>{{ entry.date_added|date:'M d,Y H:i' }}</p>
         <p>{{ entry.text|linebreaks }}</p>
+        <p>
+            <a href="{% url 'learninglogs:edit_entry' entry.id %}">编辑条目</a>
+        </p>
     </li>
     {% empty %}
         <li>There are no entries for this topic yet. </li>
