--- a/learning_log/users/templates/users/login.html
+++ b/learning_log/users/templates/users/login.html
@@ -9,19 +9,19 @@
 
 {% block content %}
 
-    {% if form.errors %}
-        <p>用户名或密码不正确，请重新输入.</p>
-    {% endif %}
+{% if form.errors %}
+  <p>Your username and password didn't match. Please try again.</p>
+{% endif %}
 
-    <form action="{% url 'users:login' %}" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-    </form>
-
-    <button name="submit">登录</button>
+<form method="post" action="{% url 'users:login' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button name="submit">login</button>
     <input type="hidden" name="next" value="{% url 'learninglogs:index' %}" />
+</form>
 
 {% endblock content %}
+
 
 
 </body>
