--- a/learning_log/learninglogs/templates/learninglogs/base.html
+++ b/learning_log/learninglogs/templates/learninglogs/base.html
@@ -8,8 +8,11 @@
     <p>
         <a href="{% url 'learninglogs:index' %}">读书笔记</a> -
         <a href="{% url 'learninglogs:topics' %}">主题</a> -
+
         {% if user.is_authenticated %}
             你好,{{ user.username }}.
+        <a href="{% url 'users:logout' %}">注销</a>
+
         {% else %}
             <a href="{% url 'users:login' %}">登录</a>
         {% endif %}
