--- a/learning_log/learninglogs/templates/learninglogs/base.html
+++ b/learning_log/learninglogs/templates/learninglogs/base.html
@@ -14,6 +14,7 @@
         <a href="{% url 'users:logout' %}">注销</a>
 
         {% else %}
+            <a href="{% url 'users:register' %}">注册</a> -
             <a href="{% url 'users:login' %}">登录</a>
         {% endif %}
 
