--- a/learning_log/learninglogs/templates/learninglogs/base.html
+++ b/learning_log/learninglogs/templates/learninglogs/base.html
@@ -1,24 +1,59 @@
 <!DOCTYPE html>
+
+{% load bootstrap3 %}
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>这是父模板</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="x-ua-compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Learning Log</title>
+
+  {% bootstrap_css %}
+  {% bootstrap_javascript %}
 </head>
+
 <body>
-    <p>
-        <a href="{% url 'learninglogs:index' %}">读书笔记</a> -
-        <a href="{% url 'learninglogs:topics' %}">主题</a> -
+<!-- Static navbar -->
+<nav class="navbar navbar-default navbar-static-top">
+  <div class="container">
 
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      </button>
+      <a class="navbar-brand" href="{% url 'learninglogs:index' %}">Learning Log</a>
+    </div>
+
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="{% url 'learninglogs:topics' %}">Topics</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
-            你好,{{ user.username }}.
-        <a href="{% url 'users:logout' %}">注销</a>
-
+          <li><a>Hello, {{ user.username }}.</a></li>
+          <li><a href="{% url 'users:logout' %}">log out</a></li>
         {% else %}
-            <a href="{% url 'users:register' %}">注册</a> -
-            <a href="{% url 'users:login' %}">登录</a>
+          <li><a href="{% url 'users:register' %}">register</a></li>
+          <li><a href="{% url 'users:login' %}">log in</a></li>
         {% endif %}
+      </ul>
+    </div><!--/.nav-collapse -->
 
-        {% block content %}{% endblock content %}
-    </p>
+  </div>
+</nav>
+<div class="container">
+
+  <div class="page-header">
+    {% block header %}{% endblock %}
+  </div>
+  <div>
+    {% block content %}{% endblock %}
+  </div>
+
+</div> <!-- /container -->
+
 </body>
 </html>
