--- a/learning_log/learninglogs/templates/learninglogs/topic.html
+++ b/learning_log/learninglogs/templates/learninglogs/topic.html
@@ -1,40 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 {% extends "learninglogs/base.html" %}
 
+{% block header %}
+  <h2>{{ topic }}</h2>
+{% endblock header %}
+
 {% block content %}
+  <p>
+    <a href="{% url 'learninglogs:new_entry' topic.id %}">add new entry</a>
+  </p>
 
-<p>
-    Topic:{{ topic }}
-</p>
-
-<p>Entries:</p>
-<p>
-    <a href="{% url 'learninglogs:new_entry' topic.id %}">添加新条目</a>
-</p>
-
-<ul>
-    {% for entry in entries %}
+  {% for entry in entries %}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3>
+          {{ entry.date_added|date:"M d, Y H:i" }}
+          <small>
+            <a href="{% url 'learninglogs:edit_entry' entry.id %}">edit
+              entry</a>
+          </small>
+        </h3>
+      </div>
+      <div class="panel-body">
+        {{ entry.text|linebreaks }}
+      </div>
+    </div> <!-- panel -->
+  {% empty %}
     <li>
-        <p>{{ entry.date_added|date:'M d,Y H:i' }}</p>
-        <p>{{ entry.text|linebreaks }}</p>
-        <p>
-            <a href="{% url 'learninglogs:edit_entry' entry.id %}">编辑条目</a>
-        </p>
+      There are no entries for this topic yet.
     </li>
-    {% empty %}
-        <li>There are no entries for this topic yet. </li>
-    {% endfor %}
-</ul>
+  {% endfor %}
 
 {% endblock content %}
-
-
-
-</body>
-</html>
