--- a/learning_log/users/templates/users/login.html
+++ b/learning_log/users/templates/users/login.html
@@ -1,28 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>登录页面</title>
-</head>
-<body>
 {% extends "learninglogs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+  <h2>Log in to your account.</h2>
+{% endblock header %}
 
 {% block content %}
 
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-<form method="post" action="{% url 'users:login' %}">
+  <form class="form" method="post" action="{% url 'users:login' %}">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button name="submit">login</button>
-    <input type="hidden" name="next" value="{% url 'learninglogs:index' %}" />
-</form>
+    {% bootstrap_form form %}
+
+    {% buttons %}
+      <button class="btn btn-primary" name="submit">log in</button>
+    {% endbuttons %}
+    <input type="hidden" name="next" value="{% url 'learninglogs:index' %}"/>
+  </form>
 
 {% endblock content %}
-
-
-
-</body>
-</html>
