--- a/learning_log/learninglogs/templates/learninglogs/new_topic.html
+++ b/learning_log/learninglogs/templates/learninglogs/new_topic.html
@@ -2,17 +2,17 @@
 {% load bootstrap3 %}
 
 {% block header %}
-  <h2>Add a new topic:</h2>
+  <h2>加点分类</h2>
 {% endblock header %}
 
 {% block content %}
 
   <form class="form" action="{% url 'learninglogs:new_topic' %}" method="post">
     {% csrf_token %}
-    {% bootstrap_form %}
+    {% bootstrap_form form %}
 
     {% buttons %}
-      <button class="btn btn-primary" name="submit">add topic</button>
+      <button class="btn btn-primary" name="submit">嗯！</button>
     {% endbuttons %}
   </form>
 
